--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ telegram-listener-sdk = "0.0.1"
 kotlin = "2.0.0"
 coroutines = "1.7.3"
 serialization = "1.3.2"
+jreleaser = "1.14.0"
 
 jupiter = "5.8.1"
 
@@ -22,4 +23,4 @@ jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "j
 jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "jupiter"}
 
 [plugins]
-
+jreleaser = { id = "org.jreleaser", version.ref = "jreleaser" }
