--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,11 @@ telegram-listener-sdk = "0.1.0"
 kotlin = "2.0.0"
 coroutines = "1.7.3"
 serialization = "1.3.2"
-jreleaser = "1.14.0"
+jreleaser = "1.18.0"
 
 jupiter = "5.8.1"
+dokka = "2.0.0"
+kmm-publish = "0.32.0"
 
 [libraries]
 ## coroutines
@@ -25,3 +27,5 @@ jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.re
 
 [plugins]
 jreleaser = { id = "org.jreleaser", version.ref = "jreleaser" }
+kmm-publish = { id = "com.vanniktech.maven.publish", version.ref = "kmm-publish"}
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka"}
